--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ div.trans
 }
 </style>
 </head>
-<body style="background-image: url('https://s3.ax1x.com/2020/12/20/rUx3od.png'); background-size: cover;">
+<body style="background-image: url('https://s3.ax1x.com/2020/12/27/rIAing.png'); background-size: cover;">
 
 <center>
 <div class="trans">真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</div>
