--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ div.trans
 // Template provided by Unknown
 function show_date_time(){
 window.setTimeout("show_date_time()", 1000);
-BirthDay=new Date("01/06/2021 08:00:00");
+BirthDay=new Date("06/06/2021 08:00:00");
 today=new Date();
 timeold=(BirthDay.getTime()-today.getTime());
 sectimeold=timeold/1000
@@ -63,7 +63,7 @@ hrsold=Math.floor(e_hrsold);
 e_minsold=(e_hrsold-hrsold)*60;
 minsold=Math.floor((e_hrsold-hrsold)*60);
 seconds=Math.floor((e_minsold-minsold)*60);
-span_dt_dt.innerHTML="<center>距 2021 年 1 月高考还有<align=center><p><font color=#A22900 size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
+span_dt_dt.innerHTML="<center>距 2021 年 6 月高考还有<align=center><p><font color=#A22900 size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
 }
 show_date_time();
 //-->
@@ -72,7 +72,7 @@ show_date_time();
 </div>
 </div>
 </center>
-<p><center>SkyblockAddons v1.5.4 <a target="_blank" href="https://github.com/BiscuitDevelopment/SkyblockAddons/releases/download/v1.5.4/SkyblockAddons-1.5.4-for-MC-1.8.9.jar">下载</a></center></p>
+<!--<p><center>SkyblockAddons v1.5.4 <a target="_blank" href="https://github.com/BiscuitDevelopment/SkyblockAddons/releases/download/v1.5.4/SkyblockAddons-1.5.4-for-MC-1.8.9.jar">下载</a></center></p>-->
 
 </body>
 </html>
