--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@ div.transbox
   margin:30px;
   background-color: #ffffff;
   border: 1px solid black;
-  /* for IE */
-  filter:alpha(opacity=60);
   /* CSS3 standard */
   opacity:0.6;
 }
@@ -29,8 +27,6 @@ div.transbox p
 
 div.trans
 {
-  /* for IE */
-  filter:alpha(opacity=70);
   /* CSS3 standard */
   opacity:0.7;
 }
@@ -72,6 +68,7 @@ show_date_time();
 </div>
 </div>
 </center>
+<center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=1382367245&auto=1&height=66"></iframe></center>
 <!--<p><center>SkyblockAddons v1.5.4 <a target="_blank" href="https://github.com/BiscuitDevelopment/SkyblockAddons/releases/download/v1.5.4/SkyblockAddons-1.5.4-for-MC-1.8.9.jar">下载</a></center></p>-->
 
 </body>
