--- a/index.html
+++ b/index.html
@@ -1,75 +1,95 @@
 <html>
-<head>
-<title>SweetCandy233</title>
-<style>
-div.background
-{
-  width: 320px;
-  height: 480px;
-  border: 1px solid black;
-}
+    <head>
+        <meta charset="UTF-8">    
+        <title>SweetCandy233</title>
+        <style>
+            div.background
+            {
+              width: 320px;
+              height: 480px;
+              border: 1px solid black;
+            }
 
-div.transbox
-{
-  width: 540px;
-  height: 160px;
-  margin:30px;
-  background-color: #ffffff;
-  border: 1px solid black;
-  /* CSS3 standard */
-  opacity:0.6;
-}
+            div.transbox
+            {
+              width: 540px;
+              height: 160px;
+              margin:30px;
+              background-color: #ffffff;
+              border: 1px solid black;
+              /* CSS3 standard */
+              opacity:0.6;
+            }
 
-div.transbox p
-{
-  margin: 30px 40px;
-}
+            div.transbox p
+            {
+              margin: 30px 30px;
+            }
 
-div.trans
-{
-  /* CSS3 standard */
-  opacity:0.7;
-}
-</style>
-</head>
-<body style="background-image: url('https://s3.ax1x.com/2020/12/27/rIAing.png'); background-size: cover;">
+            div.trans
+            {
+              /* CSS3 standard */
+              opacity:0.7;
+            }
+        </style>
+    </head>
 
-<center>
-<div class="trans">真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</div>
-<div class="transbox">
-<p>
+        
+    <body style="background-image: url('https://s3.ax1x.com/2020/12/27/rIAing.png'); background-size: cover;">
+        
+        <script type="text/javascript">    
+            window.onblur=function(){
+            document.title="Special Thanks to ItsNotch233";
+            };
+            window.onfocus=function () {
+            document.title="SweetCandy233";
+            }
+        </script>
 
-<span id=span_dt_dt></span>
-<script language=javascript>
-<!--
-//document.write("");
-// Template provided by Unknown
-function show_date_time(){
-window.setTimeout("show_date_time()", 1000);
-BirthDay=new Date("06/06/2021 08:00:00");
-today=new Date();
-timeold=(BirthDay.getTime()-today.getTime());
-sectimeold=timeold/1000
-secondsold=Math.floor(sectimeold);
-msPerDay=24*60*60*1000
-e_daysold=timeold/msPerDay
-daysold=Math.floor(e_daysold);
-e_hrsold=(e_daysold-daysold)*24;
-hrsold=Math.floor(e_hrsold);
-e_minsold=(e_hrsold-hrsold)*60;
-minsold=Math.floor((e_hrsold-hrsold)*60);
-seconds=Math.floor((e_minsold-minsold)*60);
-span_dt_dt.innerHTML="<center>距 2021 年 6 月高考还有<align=center><p><font color=#A22900 size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
-}
-show_date_time();
-//-->
-</script>
-</p>
-</div>
-</div>
-</center>
-<center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=1382367245&auto=1&height=66"></iframe></center>
-<!--<p><center>SkyblockAddons v1.5.4 <a target="_blank" href="https://github.com/BiscuitDevelopment/SkyblockAddons/releases/download/v1.5.4/SkyblockAddons-1.5.4-for-MC-1.8.9.jar">下载</a></center></p>-->
+        <center>
+        <div class="trans">真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</div>
+        <div class="transbox">
+        <p>
 
-</body>
+        <span id=span_dt_dt></span>
+            <script language=javascript>
+                // Template provided by Unknown
+                function show_date_time(){
+                    window.setTimeout("show_date_time()", 1000);
+                    BirthDay=new Date("06/07/2021 09:00:00");
+                    today=new Date();
+                    timeold=(BirthDay.getTime()-today.getTime());
+                    sectimeold=timeold/1000
+                    secondsold=Math.floor(sectimeold);
+                    msPerDay=24*60*60*1000
+                    e_daysold=timeold/msPerDay
+                    daysold=Math.floor(e_daysold);
+                    e_hrsold=(e_daysold-daysold)*24;
+                    hrsold=Math.floor(e_hrsold);
+                    e_minsold=(e_hrsold-hrsold)*60;
+                    minsold=Math.floor((e_hrsold-hrsold)*60);
+                    seconds=Math.floor((e_minsold-minsold)*60);
+                    span_dt_dt.innerHTML="<center>距 2021 年 6 月高考还有<align=center><p><font color=#A22900 size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
+                }
+                show_date_time();
+            </script>
+        </p>
+        </div>
+        </div>
+        </center>
+        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=1382367245&auto=1&height=66"></iframe></center>
+        <!--<p><center> <a target="_blank" href="http://music.163.com/song/media/outer/url?id=1382367245.mp3">下载该歌曲</a></center></p>-->
+		<p><center><a target="_blank" href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>
+    </body>
+    <!--<script>
+        // 禁用 F12 及复制
+        document.onselectstart=function(){return false;};
+             window.oncontextmenu=function(){return false;}  
+             window.onkeydown = window.onkeyup = window.onkeypress = function (event) { 
+            if(event.code == 'F12'){
+              window.event.returnValue = false; 
+               return false;
+             }
+            }
+   </script>-->
 </html>
