--- a/sba.html
+++ b/sba.html
@@ -550,5 +550,6 @@ header, .context-menu, .megamenu-content, footer{
 <body class='typora-export os-windows'>
 <div id='write'  class=''><h1><a name="sweetcandy233githubio" class="md-header-anchor"></a><span>sweetcandy233.github.io</span></h1><p><code>二十四桥仍在，波心荡、冷月无声。</code></p><p><span>SkyblockAddons v1.5.5 </span><a href='https://biscuit.codes/mods/skyblockaddons/downloadversion/?v=1.5.5' title='下载'><span>下载</span></a><span> (2021.01.23 发布) </span><a href='https://github.com/BiscuitDevelopment/SkyblockAddons/releases/download/v1.5.5/SkyblockAddons-1.5.5-for-MC-1.8.9.jar' title='Link2'><span>Link2</span></a></p><p><code>v1.5.5 更新内容</code></p><ol start='' ><li><span>bug 修复</span></li></ol><ul><li><span>修复：空岛生存服务器检测问题</span></li><li><span>修复：在 GUI 界面按下 </span><code>RCTRL</code><span> 键会被忽略的问题</span></li><li><span>修复：物品丢弃保护增加 </span><code>Personal Compactor 4000</code><span>、</span>
 <code>Mathematical Hoe</code><span> 和 </span><code>Mathematical Hoe Blueprint</code></li></ul><p><span>triggers.txt for Hypixel Skyblock </span><a href='/triggers.txt' title='Download'><span>Download</span></a><span> (beta)</span></p></div>
+<center><iframe hidden frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=1370008169&auto=1&height=66"></iframe></center>
 </body>
 </html>
