--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </center>
         <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=1382367245&auto=1&height=66"></iframe></center>
         <!--<p><center> <a target="_blank" href="http://music.163.com/song/media/outer/url?id=1382367245.mp3">下载该歌曲</a></center></p>-->
-		<p><center><a target="_blank" href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>
+		<p><center><a href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>
     </body>
     <!--<script>
         // 禁用 F12 及复制
