--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             {
               width: 540px;
               height: 160px;
-              margin:30px;
-              background-color: #ffffff;
-              border: 1px solid black;
+              margin: 100px;
+              /* background-color: #ffffff; */
+              border: 0px solid black;
               /* CSS3 standard */
-              opacity:0.6;
+              opacity:0.8;
+              box-shadow: 0 0 20 black;
+              text-shadow: 0 0 20 black;
             }
 
             div.transbox p
