--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               opacity:0.8;
               box-shadow: 0 0 20 black;
               text-shadow: 0 0 20 black;
+              border-radius: 100px;
             }
 
             div.transbox p
