--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
               width: 540px;
               height: 160px;
               margin: 100px;
-              /* background-color: #ffffff; */
+              background-color: #ffffff;
               border: 0px solid black;
               /* CSS3 standard */
               opacity:0.8;
-              box-shadow: 0 0 20 black;
-              text-shadow: 0 0 20 black;
+              /* box-shadow: 0 0 20 black; */
+              /* text-shadow: 0 0 20 black; */
               border-radius: 100px;
             }
 
