--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               /* CSS3 standard */
               opacity:0.8;
               box-shadow: 0px 0px 20px black;
-              text-shadow: 0px 0px 20px black;
+              /* text-shadow: 0px 0px 20px black; */
               border-radius: 100px;
             }
 
