--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               /* background-color: #ffffff; */
               border: 0px solid black;
               /* CSS3 standard */
-              opacity:0.8;
+              opacity: 0.8;
               box-shadow: 0px 0px 20px black;
               /* text-shadow: 0px 0px 20px black; */
               border-radius: 100px;
@@ -32,7 +32,7 @@
             div.trans
             {
               /* CSS3 standard */
-              opacity:0.7;
+              opacity: 0.7;
             }
         </style>
     </head>
@@ -41,11 +41,11 @@
     <body style="background-image: url('https://s3.ax1x.com/2020/12/27/rIAing.png'); background-size: cover;">
         
         <script type="text/javascript">    
-            window.onblur=function(){
-            document.title="Special Thanks to ItsNotch233";
+            window.onblur = function() {
+            document.title = "我们 有缘再见";
             };
-            window.onfocus=function () {
-            document.title="SweetCandy233";
+            window.onfocus = function() {
+            document.title = "SweetCandy233";
             }
         </script>
 
@@ -57,22 +57,22 @@
         <span id=span_dt_dt></span>
             <script language=javascript>
                 // Template provided by Unknown
-                function show_date_time(){
+                function show_date_time() {
                     window.setTimeout("show_date_time()", 1000);
-                    BirthDay=new Date("06/07/2021 09:00:00");
-                    today=new Date();
-                    timeold=(BirthDay.getTime()-today.getTime());
-                    sectimeold=timeold/1000
-                    secondsold=Math.floor(sectimeold);
-                    msPerDay=24*60*60*1000
-                    e_daysold=timeold/msPerDay
-                    daysold=Math.floor(e_daysold);
-                    e_hrsold=(e_daysold-daysold)*24;
-                    hrsold=Math.floor(e_hrsold);
-                    e_minsold=(e_hrsold-hrsold)*60;
-                    minsold=Math.floor((e_hrsold-hrsold)*60);
-                    seconds=Math.floor((e_minsold-minsold)*60);
-                    span_dt_dt.innerHTML="<center>距 2021 年 6 月高考还有<align=center><p><font color=#A22900 size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
+                    BirthDay = new Date("06/07/2021 09:00:00");
+                    today = new Date();
+                    timeold = (BirthDay.getTime()-today.getTime());
+                    sectimeold = timeold/1000
+                    secondsold = Math.floor(sectimeold);
+                    msPerDay = 24*60*60*1000
+                    e_daysold = timeold/msPerDay
+                    daysold = Math.floor(e_daysold);
+                    e_hrsold = (e_daysold-daysold)*24;
+                    hrsold = Math.floor(e_hrsold);
+                    e_minsold = (e_hrsold-hrsold)*60;
+                    minsold = Math.floor((e_hrsold-hrsold)*60);
+                    seconds = Math.floor((e_minsold-minsold)*60);
+                    span_dt_dt.innerHTML = "<center>距 2021 年 6 月高考还有<align=center><p><font color=#A22900 size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
                 }
                 show_date_time();
             </script>
@@ -80,19 +80,20 @@
         </div>
         </div>
         </center>
-        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=1382367245&auto=1&height=66"></iframe></center>
+        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=20% height=86 src="https://music.163.com/outchain/player?type=2&id=35625821&auto=1&height=66"></iframe></center>
         <!--<p><center> <a target="_blank" href="http://music.163.com/song/media/outer/url?id=1382367245.mp3">下载该歌曲</a></center></p>-->
-		<p><center><a href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>
+		<!--<p><center><a href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>-->
+    <a href="https://www.bilibili.com/video/BV1Lb4y1Z7Ny" target="_blank"><div style="text-align: -webkit-center;"><br>这个夏天，我们毕业了！#3</div></a>
     </body>
     <!--<script>
         // 禁用 F12 及复制
         document.onselectstart=function(){return false;};
-             window.oncontextmenu=function(){return false;}  
-             window.onkeydown = window.onkeyup = window.onkeypress = function (event) { 
+            window.oncontextmenu=function(){return false;}  
+            window.onkeydown = window.onkeyup = window.onkeypress = function (event) { 
             if(event.code == 'F12'){
               window.event.returnValue = false; 
-               return false;
-             }
+              return false;
             }
-   </script>-->
+            }
+  </script>-->
 </html>
