--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <!--<p><center> <a target="_blank" href="http://music.163.com/song/media/outer/url?id=1382367245.mp3">下载该歌曲</a></center></p>-->
 		<!--<p><center><a href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>-->
     <a href="https://www.bilibili.com/video/BV1Lb4y1Z7Ny" target="_blank"><div style="text-align: -webkit-center;"><br>这个夏天，我们毕业了！#3</div></a>
+    <br>
+    <a href="https://wh904.mysxl.cn/" target="_blank"><div style="text-align: -webkit-center;">致我们一起走过的初中三年</div></a>
     </body>
     <!--<script>
         // 禁用 F12 及复制
