--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         </div>
         </center>
-        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1440756151&auto=1&height=66"></iframe>
+        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1440756151&auto=1&height=66"></iframe></center>
         <!--<p><center> <a target="_blank" href="http://music.163.com/song/media/outer/url?id=1382367245.mp3">下载该歌曲</a></center></p>-->
 		<!--<p><center><a href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>-->
     <a href="https://www.bilibili.com/video/BV1Lb4y1Z7Ny" target="_blank"><div style="text-align: -webkit-center;"><br>这个夏天，我们毕业了！#3</div></a>
