--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <meta charset="UTF-8">    
+		<link rel="shortcut  icon" href="favicon.ico" type="image/x-icon" />
+        <meta charset="UTF-8">
         <title>SweetCandy233</title>
         <style>
             div.background
@@ -53,7 +54,6 @@
         <div class="trans">真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</div>
         <div class="transbox">
         <p>
-
         <span id=span_dt_dt></span>
             <script language=javascript>
                 // Template provided by Unknown
@@ -80,9 +80,7 @@
         </div>
         </div>
         </center>
-        <center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1440756151&auto=1&height=66"></iframe></center>
-        <!--<p><center> <a target="_blank" href="http://music.163.com/song/media/outer/url?id=1382367245.mp3">下载该歌曲</a></center></p>-->
-		<!--<p><center><a href="https://sweetcandy233.github.io/sba.html">SkyblockAddons</a></center></p>-->
+		<p align="center"><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1440756151&auto=1&height=66"></iframe></p>
     <a href="https://www.bilibili.com/video/BV1Lb4y1Z7Ny" target="_blank"><div style="text-align: -webkit-center;"><br>这个夏天，我们毕业了！#3</div></a>
     <br>
     <a href="https://wh904.mysxl.cn/" target="_blank"><div style="text-align: -webkit-center;">致我们一起走过的初中三年</div></a>
