--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </script>
 
         <center>
-        <div class="trans"><font color=#f2d06d>真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</font></div>
+        <div><font color=#866a46>真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</font></div>
         <div class="transbox">
         <p>
         <span id=span_dt_dt></span>
@@ -85,7 +85,7 @@
                     e_minsold = (e_hrsold-hrsold)*60;
                     minsold = Math.floor((e_hrsold-hrsold)*60);
                     seconds = Math.floor((e_minsold-minsold)*60);
-                    span_dt_dt.innerHTML = "<center><font color=#f2d06d>距 2022 年 6 月高考还有</font><align=center><p><font color=f2d06d size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
+                    span_dt_dt.innerHTML = "<center><font color=#866a46>距 2022 年 6 月高考还有</font><align=center><p><font color=f2d06d size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
                 }
                 show_date_time();
             </script>
