--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8">
         <title>SweetCandy233</title>
         <style>
+			
+			div{
+					height: 600px;
+					line-height: 600px;
+					text-align: center;
+					text-shadow: 0 0 10px white,0 0 20px white,0 0 30px white,0 0 40px white;
+				}
+		
             div.background
             {
               width: 320px;
