--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
         <title>SweetCandy233</title>
         <style>
 			
-			div{
-					height: 600px;
-					line-height: 600px;
-					text-align: center;
-					text-shadow: 0 0 10px white,0 0 20px white,0 0 30px white,0 0 40px white;
-				}
+		div
+		{
+		  text-align: center;
+		  text-shadow: 0 0 10px white,0 0 20px white,0 0 30px white,0 0 40px white;
+		}
 		
             div.background
             {
@@ -44,18 +43,12 @@
               opacity: 0.7;
             }
 			
-			a
-			{
-			  color:#FFFFFF
-			}
+	    a{color:#FFFFFF}
 			
-            a:hover
-			{
-			  color:#F00
-			}
+            a:hover{color:#F00}
 			
-			.div a{color:#FFFFFF}
-			.div a:hover{color:#090}
+	    .div a{color:#FFFFFF}
+            .div a:hover{color:#090}
         </style>
     </head>
 
