--- a/index.html
+++ b/index.html
@@ -1,102 +1,114 @@
 <html>
-    <head>
-		<link rel="shortcut  icon" href="favicon.ico" type="image/x-icon" />
-        <meta charset="UTF-8">
-        <title>SweetCandy233</title>
-        <style>
-			
-		div
-		{
-		  text-align: center;
-		  text-shadow: 0 0 10px white,0 0 20px white,0 0 30px white,0 0 40px white;
-		}
-		
-            div.background
-            {
-              width: 320px;
-              height: 480px;
-              border: 1px solid black;
-            }
 
-            div.transbox
-            {
-              width: 540px;
-              height: 160px;
-              margin: 30px;
-              /* background-color: #ffffff; */
-              border: 0px solid black;
-              /* CSS3 standard */
-              opacity: 0.8;
-              box-shadow: 0px 0px 20px black;
-              /* text-shadow: 0px 0px 20px black; */
-              border-radius: 100px;
-            }
+<head>
+  <link rel="shortcut  icon" href="favicon.ico" type="image/x-icon" />
+  <meta charset="UTF-8">
+  <title>SweetCandy233</title>
+  <style>
+    div {
+      text-align: center;
+      text-shadow: 0 0 10px white, 0 0 20px white, 0 0 30px white, 0 0 40px white;
+    }
 
-            div.transbox p
-            {
-              margin: 30px 30px;
-            }
+    div.background {
+      width: 320px;
+      height: 480px;
+      border: 1px solid black;
+    }
 
-            div.trans
-            {
-              /* CSS3 standard */
-              opacity: 0.7;
-            }
-			
-	    a{color:#FFFFFF}
-			
-            a:hover{color:#F00}
-			
-	    .div a{color:#FFFFFF}
-            .div a:hover{color:#090}
-        </style>
-    </head>
+    div.transbox {
+      width: 540px;
+      height: 160px;
+      margin: 30px;
+      /* background-color: #ffffff; */
+      border: 0px solid black;
+      /* CSS3 standard */
+      opacity: 0.8;
+      box-shadow: 0px 0px 20px black;
+      /* text-shadow: 0px 0px 20px black; */
+      border-radius: 100px;
+    }
 
-        
-    <body style="background-image: url('/assets/bg1.jpg'); background-size: cover;">
-        
-        <script type="text/javascript">    
-            window.onblur = function() {
-            document.title = "我们 有缘再见";
-            };
-            window.onfocus = function() {
-            document.title = "SweetCandy233";
-            }
-        </script>
+    div.transbox p {
+      margin: 30px 30px;
+    }
 
-        <center>
-        <div><font color=#866a46>真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</font></div>
-        <div class="transbox">
-        <p>
+    div.trans {
+      /* CSS3 standard */
+      opacity: 0.7;
+    }
+
+    a {
+      color: #FFFFFF
+    }
+
+    a:hover {
+      color: #F00
+    }
+
+    .div a {
+      color: #FFFFFF
+    }
+
+    .div a:hover {
+      color: #090
+    }
+  </style>
+</head>
+
+
+<body style="background-image: url('/assets/bg1.jpg'); background-size: cover;">
+
+  <script type="text/javascript">
+    window.onblur = function () {
+      document.title = "我们 有缘再见";
+    };
+    window.onfocus = function () {
+      document.title = "SweetCandy233";
+    }
+  </script>
+
+  <center>
+    <div>
+      <font color=#866a46>真正的友谊不是形影不离般到朝朝暮暮，而是相隔天边、时过境迁却心意不变。</font>
+    </div>
+    <div class="transbox">
+      <p>
         <span id=span_dt_dt></span>
-            <script language=javascript>
-                // Template provided by Unknown
-                function show_date_time() {
-                    window.setTimeout("show_date_time()", 1000);
-                    BirthDay = new Date("06/07/2022 09:00:00");
-                    today = new Date();
-                    timeold = (BirthDay.getTime()-today.getTime());
-                    sectimeold = timeold/1000
-                    secondsold = Math.floor(sectimeold);
-                    msPerDay = 24*60*60*1000
-                    e_daysold = timeold/msPerDay
-                    daysold = Math.floor(e_daysold);
-                    e_hrsold = (e_daysold-daysold)*24;
-                    hrsold = Math.floor(e_hrsold);
-                    e_minsold = (e_hrsold-hrsold)*60;
-                    minsold = Math.floor((e_hrsold-hrsold)*60);
-                    seconds = Math.floor((e_minsold-minsold)*60);
-                    span_dt_dt.innerHTML = "<center><font color=#866a46>距 2022 年 6 月高考还有</font><align=center><p><font color=f2d06d size=+3><p>"+daysold+" 天 "+hrsold+" 小时 "+minsold+" 分 "+seconds+" 秒 "+"<br></font><br></center>" ;
-                }
-                show_date_time();
-            </script>
-        </p>
-        </div>
-        </div>
-        </center>
-		<p align="center"><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=35625821&auto=1&height=66"></iframe></p>
-    <a href="https://www.bilibili.com/video/BV1Lb4y1Z7Ny" target="_blank"><div style="text-align: -webkit-center;"><br>这个夏天，我们毕业了！#3</div></a>
-    <br>
-    <a href="https://wh904.mysxl.cn/" target="_blank"><div style="text-align: -webkit-center;">致我们一起走过的初中三年</div></a>
-    </body>
+        <script language=javascript>
+          // Template provided by Unknown
+          function show_date_time() {
+            window.setTimeout("show_date_time()", 1000);
+            BirthDay = new Date("06/07/2022 09:00:00");
+            today = new Date();
+            timeold = (BirthDay.getTime() - today.getTime());
+            sectimeold = timeold / 1000
+            secondsold = Math.floor(sectimeold);
+            msPerDay = 24 * 60 * 60 * 1000
+            e_daysold = timeold / msPerDay
+            daysold = Math.floor(e_daysold);
+            e_hrsold = (e_daysold - daysold) * 24;
+            hrsold = Math.floor(e_hrsold);
+            e_minsold = (e_hrsold - hrsold) * 60;
+            minsold = Math.floor((e_hrsold - hrsold) * 60);
+            seconds = Math.floor((e_minsold - minsold) * 60);
+            span_dt_dt.innerHTML = "<center><font color=#866a46>距 2022 年 6 月高考还有</font><align=center><p><font color=f2d06d size=+3><p>" + daysold + " 天 " + hrsold + " 小时 " + minsold + " 分 " + seconds + " 秒 " + "<br></font><br></center>";
+          }
+          show_date_time();
+        </script>
+      </p>
+    </div>
+    </div>
+  </center>
+  <p align="center"><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86
+      src="//music.163.com/outchain/player?type=2&id=1440756151&auto=1&height=66"></iframe></p>
+  <a href="https://www.bilibili.com/video/BV1Lb4y1Z7Ny" target="_blank">
+    <div style="text-align: center;"><br>这个夏天，我们毕业了！#3</div>
+  </a>
+  <br>
+  <a href="https://wh904.mysxl.cn/" target="_blank">
+    <div style="text-align: center;">致我们一起走过的初中三年</div>
+  </a>
+</body>
+
 </html>
